@@ -1,5 +1,6 @@
 V.Next
 ----------
+- [MINOR] Handle crypto error gracefully (#2190)
 - [MINOR] Stop logging thread name (#2185)
 
 V.16.0.1
